# ThermalCamera

./: README.md  manual_test.sh  test.sh  upload_bin.sh
CAD_Case/: Case_Assembly.20230723-172551.FCBak  Case_Assembly.20230816-163336.FCBak  Case_Assembly.20230816-163345.FCBak  Case_Assembly.20230816-163550.FCBak  Case_Assembly.20230816-164730.FCBak  Case_Assembly.20230816-170731.FCBak  Case_Assembly.20230816-171406.FCBak  Case_Assembly.20230816-171741.FCBak  Case_Assembly.20230816-172316.FCBak  Case_Assembly.20230816-173520.FCBak  Case_Assembly.20230816-174133.FCBak  Case_Assembly.20230910-110257.FCBak  Case_Assembly.20230910-110749.FCBak  Case_Assembly.20230910-112020.FCBak  Case_Assembly.20230910-112023.FCBak  Case_Assembly.20230910-112132.FCBak  Case_Assembly.FCStd  Case_Assembly.FCStd1
CAD_CaseV2/: CaseV2_Assembly.20230910-151624.FCBak  CaseV2_Assembly.20230910-180850.FCBak  CaseV2_Assembly.20230910-182027.FCBak  CaseV2_Assembly.20230910-182850.FCBak  CaseV2_Assembly.20230910-183431.FCBak  CaseV2_Assembly.20230910-184620.FCBak  CaseV2_Assembly.20231007-191156.FCBak  (+48 more)
scripts/: deploy.sh  (+8 more)
thermal-camera/: Cargo.toml  rust-toolchain.toml
thermal-camera/.cargo/: config.toml
thermal-camera/src/: app.rs  main.rs
thermal-camera/src/app/: bsp.rs  mlx.rs  window.rs
thermal-camera/src/app/mlx/: bsp_mlx.rs  mlx_image.rs
thermal-camera/src/app/mlx/bsp_mlx/: mlx_eeprom.rs
thermal-camera/src/app/window/: controls.rs  display.rs  options.rs  scale.rs
thermal-camera/src/app/window/controls/: options.rs
thermal-camera/src/app/window/display/: image.rs  scale.rs
(+287 files in other folders)
