[package]
name = "thermal-camera"
description = "A GUI application utilizing the MLX90640 with Raspberry Pi to display a thermal image"
categories = ["embedded", "gui", "visualization"]
keywords = ["thermal", "mlx", "melexis", "mlx90460", "melexis90460"]
repository = "https://github.com/CinTheDev/ThermalCamera.git"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
eframe = "0.27.0"
image = "0.24.6"
lazy_static = "1.4.0"
rppal = "0.14.1"
structopt = "0.3.26"
